<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.0</version>
        <relativePath/>
    </parent>

    <groupId>com.asc</groupId>
    <artifactId>identity</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <mailingLists>
        <mailingList>
            <name>support</name>
            <post>mailto:support@onlyoffice.com</post>
        </mailingList>
    </mailingLists>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/ONLYOFFICE/DocSpace/issues</url>
    </issueManagement>

    <modules>
        <module>authorization</module>
        <module>common</module>
        <module>infrastructure</module>
        <module>registration</module>
    </modules>

    <properties>
        <buildnumber.maven.plugin.version>3.1.0</buildnumber.maven.plugin.version>
        <dependency.maven.check.plugin.version>9.2.0</dependency.maven.check.plugin.version>
        <depgraph.maven.plugin.version>4.0.3</depgraph.maven.plugin.version>
        <junit.version>5.10.2</junit.version>
        <mockito.version>5.12.0</mockito.version>

        <maven.compiler.plugin.vesrion>3.13.0</maven.compiler.plugin.vesrion>
        <maven.formatter.plugin.version>2.23</maven.formatter.plugin.version>
        <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal Dependencies -->
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>authorization-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>authorization-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>authorization-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-utilities</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-service</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Utility Dependencies -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>

        <!-- Testing Dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.vesrion}</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>${dependency.maven.check.plugin.version}</version>
                <configuration>
                    <skipProvidedScope>true</skipProvidedScope>
                </configuration>
                <executions>
                    <execution>
                        <id>run-dependency-check</id>
                        <phase>site</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.ferstl</groupId>
                <artifactId>depgraph-maven-plugin</artifactId>
                <version>${depgraph.maven.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>com.spotify.fmt</groupId>
                <artifactId>fmt-maven-plugin</artifactId>
                <version>${maven.formatter.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>